[package]
name = "rust"
version = "0.1.0"
authors = ["BuildTools <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2"}
[lib]
crate-type = ["cdylib", "rlib"]
